// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Header snapshot 1`] = `
<DocumentFragment>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorSecondary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h2
        class="MuiTypography-root MuiTypography-h2"
        style="margin: 0px auto;"
      >
        <a
          class="css-15rvyqs"
        >
          Yumido
        </a>
      </h2>
      <button
        aria-label="create menu button"
        class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-primary"
        tabindex="0"
        title="Create menu"
        type="button"
      >
        <span
          class="MuiFab-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            data-testid="create_button"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </header>
</DocumentFragment>
`;

exports[`renders no button on create page 1`] = `
<DocumentFragment>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorSecondary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h2
        class="MuiTypography-root MuiTypography-h2"
        style="margin: 0px auto;"
      >
        <a
          class="css-15rvyqs"
        >
          Yumido
        </a>
      </h2>
    </div>
  </header>
</DocumentFragment>
`;
